add new info about spotmatch game

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
   <div id="abouttext">
     <h2>Vision Therapy exercises</h2>
     <div class="plain">
+      These tools and mini-games are designed for use under guidance from a vision therapist. Some of the tools are modeled after existing games, and can be played as regular games.<br/><br/>
       This open-source project is a work in progress.<br />
-      To view the code, contribute, or provide feedback, visit:<br />
-      <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
+      Visit this site's <a href="https://github.com/visiontherapy/visiontherapy.github.io">GitHub repository</a> to view the code, contribute, or provide feedback.
+     
     </div>
     <hr />
-
+Contents:
     <ul>
       <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a></li>
       <li><a href="#hart">Hart Chart / Decoding</a></li>
@@ -224,9 +225,11 @@
         <li>Randomized scale &amp; rotation of the shapes can be toggled in the Settings.</li>
         <li>Dual device feature:
           <ul>
-            <li>Toggle Matched mode to display one shape cluster on the device.</li>
-            <li>Scan the QR code on the second device to display the matched cluster.</li>
-            <li>Identify and click the matching shape on both devices to proceed in parallel.</li>
+            <li>Toggle Matched mode to display one shape cluster on the first device.</li>
+            <li>Scan the QR code with your  second device (smartphone) to display the matched cluster.</li>
+            <li>*NEW* Auto-advance mode: clicking a match on one device will also trigger a change on the other device.
+            </li>
+            <li>For manual play, uncheck Auto Advance mode. Identify and click the matching shape on both devices to proceed in parallel.</li>
           </ul>
         </li>
       </ul>
