--- a/spotmatch.html
+++ b/spotmatch.html
@@ -209,7 +209,7 @@
 
     let peer, conn, gameuuid, globalmatchedmode, gamerng;
 
-    let spotitdebug = false;
+    let spotitdebug = true;
 
     if (!spotitdebug) console.log("Set `spotitdebug = true` to see debug logs");
 
