uncheck auto flip default

--- a/spotmatch.html
+++ b/spotmatch.html
@@ -193,7 +193,7 @@
 
       <div id="qrplace"></div>
 
-      <div><input type="checkbox" class="slider" id="autoflip" checked /> <label class="button" for="autoflip">Auto-advance</label></div>
+      <div><input type="checkbox" class="slider" id="autoflip" /> <label class="button" for="autoflip">Auto-advance</label></div>
 
       <div><input type="checkbox" class="slider" id="rotate" checked /><label class="button" for="rotate">+rotation</label></div>
 
