spotit autoflip - need same network

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Contents:
           <ul>
             <li>Toggle Matched mode to display one shape cluster on the first device.</li>
             <li>Scan the QR code with your  second device (smartphone) to display the matched cluster.</li>
-            <li>*NEW* Auto-advance mode: clicking a match on one device will also trigger a change on the other device.
+            <li>*NEW* Auto-advance mode: clicking a match on one device will also trigger a change on the other device. (Best if both devices are on the same WiFi network.)
             </li>
             <li>For manual play, uncheck Auto Advance mode. Identify and click the matching shape on both devices to proceed in parallel.</li>
           </ul>
