--- a/fistbump.html
+++ b/fistbump.html
@@ -117,16 +117,11 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
 
     let main = document.querySelector("#fistbump");
 
-
-    let darkmode = document.querySelector("#darkmode");
-
     let colormode = document.querySelector("#colormode");
 
     colormode.onclick = () => {
       showchart();
     };
-
-
 
     showchart();
 
@@ -156,6 +151,7 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
       window.location.hash = "";
     };
 
+    // TODO : Make this printable
 
   </script>
   <style>
