spot match info update

--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
     <h2>Vision Therapy exercises</h2>
     <div class="plain">
       These tools and mini-games are designed for use under guidance from a vision therapist. Some of the tools are modeled after existing games, and can be played as regular games.<br/><br/>
-      This open-source project is a work in progress.<br />
-      Visit this site's <a href="https://github.com/visiontherapy/visiontherapy.github.io">GitHub repository</a> to view the code, contribute, or provide feedback.
+      Please visit the project's <a href="https://github.com/visiontherapy/visiontherapy.github.io">GitHub repository</a> to view the code, contribute, or provide feedback.
      
     </div>
     <hr />
@@ -207,14 +206,21 @@ Contents:
       <ul>
         <li>Drag tiles into the play area</li>
         <li>Click to rotate clockwise, Right click to rotate counter-clockwise
-          <ul>
-            <!-- li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li-->
+          <!-- <ul>
+            li><strike>Works best with Firefox. On Chrome based browsers, the tile rotation does not get applied to the dragged image.</strike></li
             <li>Fixed drag image rotation issue with certain browsers. Animation for rotation event is now based on layer opacity.</li>
-          </ul>
+          </ul> -->
         </li>
         <li>Incorrectly placed tile will be tinted red.</li>
         <li>Drag tile over existing tiles to swap places (swapped tile gets bumped back to the tray)</li>
         <li>Confirmation will display before reloading the game or navigating away if tiles are in play.</li>
+        <li>Extended tileset!
+          <ul>
+            <li>Use the dropdown menu to switch from the default tileset.</li>
+            <li>You can play with all 68 possible pattern tiles, or a random selection of 36 tiles.</li>
+            <li>For extremely geeky details, see <a href="blocks_about.html">this writeup</a> on the process of generating the full tileset.</li>
+          </ul>
+        </li>
       </ul>
     </div>
 
@@ -251,6 +257,7 @@ Contents:
         <li>Adjust complexity by setting the Level via the dropdown menu.</li>
         <li>Works best on a desktop browser (wide screen)</li>
         <li>Toggle Color mode for added complexity (say the color name as you slap/tap).</li>
+        <li>TODO: make printable</li>
       </ul>
 
     </div>
@@ -268,11 +275,10 @@ Contents:
           </ul>
         </li>
         <li>Toggle Color mode for added complexity (say the color name as you go).</li>
+        <li>TODO: make printable</li>
       </ul>
 
     </div>
-
-
     <hr />
     <br />
     <br />
