custom element link

--- a/blocks_about.html
+++ b/blocks_about.html
@@ -182,7 +182,7 @@
    
     <div>Starting clockwise from the top left: segments 1, 2, 3, and 6 are in the "on" state.</div>
 
-    <div>The tile elment is a <a href="">Custom Element</a>. I converted the original tile set into a list of numeric representations that the script uses to generate the tiles programmatically</div>
+    <div>The tile elment is a <a href="https://web.dev/articles/custom-elements-v1">Custom Element</a>. I converted the original tile set into a list of numeric representations that the script uses to generate the tiles programmatically</div>
 
 
     <h3>Brainstorming:</h3>
