link back to blocks.html

--- a/blocks_about.html
+++ b/blocks_about.html
@@ -161,7 +161,7 @@
 
     <h3>Scenario:</h3>
 
-    <div>A pattern-matching game has square tiles that are radially divided into 8 segments. Each segment can be black or white. The varying distribution of the black/white segments create the tile patterns. (The game involves aligning the tiles so that the touching sides have matching patterns. But that's a talk for a later time.)</div>
+    <div>A <a href="blocks.html">pattern-matching game</a> has square tiles that are radially divided into 8 segments. Each segment can be black or white. The varying distribution of the black/white segments create the tile patterns. (The game involves aligning the tiles so that the touching sides have matching patterns. But that's a talk for a later time.)</div>
 
     <div>The original game comes with 36 tiles which, when placed in perfect arrangement, produces a 6 x 6 grid of tiles.</div>
 
