correction to tile set info

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@ Contents:
         <li>Confirmation will display before reloading the game or navigating away if tiles are in play.</li>
         <li>Extended tileset!
           <ul>
-            <li>Use the dropdown menu to switch from the default tileset.</li>
-            <li>You can play with all 68 possible pattern tiles, or a random selection of 36 tiles.</li>
+            <li>Use the dropdown menu to switch from the default tileset (64 tiles).</li>
+            <li>You can play with all 70 possible tile patterns, or a random selection of 36 tiles.</li>
             <li>For extremely geeky details, see <a href="blocks_about.html">this writeup</a> on the process of generating the full tileset.</li>
           </ul>
         </li>
