--- a/blocks_about.html
+++ b/blocks_about.html
@@ -405,7 +405,7 @@
 		<bl-ock value=""></bl-ock>
 		</diV>
 
-		<div>So the full official set has 64 tiles. Since the set is non-random and static, rather than wasting time and CPU cycles generating the tiles on the fly every time, I included the resulting numeric representations in the code. the resulting Pattern Blocks game, I  Here is the finished code.</div>
+		<div>So the full official set has 64 tiles. Since the set is non-random and static, rather than wasting time and CPU cycles generating the tiles on the fly every time, I included the resulting numeric representations in the code. Here is the finished code.</div>
 
     <code class="codeblock" id="find_all_tiles"></code>
     <script>
