change playslot background to be more distinct from tile colors

--- a/blocks.html
+++ b/blocks.html
@@ -141,7 +141,7 @@
       .playslot {
         width: var(--blocksize);
         height: var(--blocksize);
-        background: var(--ctrlbg);
+        background: #777;
         display: inline-block;
 
         bl-ock {
