disable random rotation for now -- broken

--- a/blocks.html
+++ b/blocks.html
@@ -317,7 +317,7 @@
         tile.value = b;
         tileholder.append(tile);
         // tile.rotatestate(Math.floor(Math.random() * 4));
-        tile.setAttribute("data-state", Math.floor(Math.random() * 4));
+        // tile.setAttribute("data-state", Math.floor(Math.random() * 4));
 
         tile.setAttribute("draggable", true);
         tile.addEventListener("dragstart", function (e) {
