--- a/blocks.html
+++ b/blocks.html
@@ -316,8 +316,10 @@
         let tile = document.createElement("bl-ock");
         tile.value = b;
         tileholder.append(tile);
-        // tile.rotatestate(Math.floor(Math.random() * 4));
-        // tile.setAttribute("data-state", Math.floor(Math.random() * 4));
+        // randomize rotation on first load
+        tile.dataset.state = Math.floor(Math.random() * 4);
+   
+
 
         tile.setAttribute("draggable", true);
         tile.addEventListener("dragstart", function (e) {
