--- a/blocks.html
+++ b/blocks.html
@@ -316,7 +316,9 @@
         let tile = document.createElement("bl-ock");
         tile.value = b;
         tileholder.append(tile);
+
         // randomize rotation on first load
+        // MUST be done AFTER appending to the DOM, since dataset is only available after it is added
         tile.dataset.state = Math.floor(Math.random() * 4);
    
 
